fix: add visible focus

--- a/src/components/lyne-teaser-hero/styles/lyne-teaser-hero.component.scss
+++ b/src/components/lyne-teaser-hero/styles/lyne-teaser-hero.component.scss
@@ -10,6 +10,7 @@
 .taser-hero {
   position: relative;
   display: block;
+  @include visibleFocus();
 }
 
 .teaser-hero__image {
